--- a/mery-pc.html
+++ b/mery-pc.html
@@ -3,7 +3,7 @@
 	<head>
 	    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">			
 	    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" 	crossorigin="anonymous">
-		<link rel="stylesheet"  type="text/css" href="style.css">
+		<link rel="stylesheet"  type="text/css" href="style-pc.css">
 		<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 	    <title>MERY</title>
 	</head>
