--- a/mery-pc.html
+++ b/mery-pc.html
@@ -8,7 +8,7 @@
 	    <title>MERY</title>
 	</head>
 	<body>
-		<header>
+		<header class="wrap">
 			<a class="title">MERY</a>
 			<div class="header-left">
 				<input type="text" name="search"" value="気になるワードを入力">
@@ -19,7 +19,7 @@
 				<a>ログイン</a>
 			</div>
 		</header>
-		<div class="top-container long">
+		<div class="top-container">
 			<div class="top-wrapper">
 				<div class="top-contents-wrapper">					
 					<div class="top-contents">
@@ -52,7 +52,7 @@
 				</div>
 			</div>
         </div>
-		<div class="main">
+		<div class="main wrap">
 			<div class="main-left">
 				<h2>記事
 					<h3 >
@@ -318,7 +318,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="advertisement-wrapper long">
+		<div class="advertisement-wrapper ">
 			<div class="advertisement">
 				<img src="https://cdn.pixabay.com/photo/2014/05/06/12/27/grey-crowned-crane-338834_960_720.jpg" class="advertisement-img">
 				<h2>アプリで、MERYがもっと便利に。
@@ -327,7 +327,7 @@
 				</h2>
 			</div>
 		</div>
-		<footer>
+		<footer class="wrap">
 			<div class="footer-logo">
 				<a>MERY</a>
 			</div>
@@ -365,7 +365,7 @@
 				</div>
 			</div>
 		</footer>
-		<div class="add">
+		<div class="add wrap">
 				<div class="add-logo">
 					<a class="add-title">MERY[メリー]</a>
 					<a class="add-sub">女の子の毎日をかわいく。</a>
